--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div><i class="fa fa-search  NAME SEARCH"></i></div>
     <div class="NAME NAME5">A</div>
     <div class="NAME  alpha" style="font-size: 10px;">ఆ</div>
-    <div class="NAME btn"><button style="background-color: orangered; color: white; border-radius: 35px; height: 40px; width: 140px; ;">Subscribe Now</button></div>
+    <div class="NAME btn"><a href="./Subscription.html"><button style="background-color: orangered; color: white; border-radius: 35px; height: 40px; width: 140px; ;">Subscribe Now</button></a></div>
     <div class="NAME btn "><button style="border-radius: 50%; background-color: darkgray;"><i class="fa fa-user" style="font-size:30px;color: gray; "></i></button></div>
     <div class="NAME NAME6"><a style="color: white; text-decoration: none;" href="./sign in.html" target="_self">Sign in</a></div>
 </div>
